--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 		<img class="img-fluid" src="images/team/4.png" alt="team-member">
 	</div>
 	<div class="name">
-		<h5>Mukhammadyusuf Abdurakhimov</h5>
+		<h5>Mukhammadyusuf</h5>
 	</div>
 	<div class="position">
 		<p>Project manager</p>
@@ -389,7 +389,7 @@
 		<img class="img-fluid" src="images/team/2.png" alt="team-member">
 	</div>
 	<div class="name">
-		<h5>Muhammadaziz Abdumalikov</h5>
+		<h5>Muhammadaziz</h5>
 	</div>
 	<div class="position">
 		<p>UI/UX Designer</p>
@@ -420,7 +420,7 @@
 		<img class="img-fluid" src="images/team/3.png" alt="team-member">
 	</div>
 	<div class="name">
-		<h5>Murodillo Ismatov</h5>
+		<h5>Murodillo</h5>
 	</div>
 	<div class="position">
 		<p>Mobile developer</p>
@@ -451,7 +451,7 @@
 		<img class="img-fluid" src="images/team/1.png" alt="team-member">
 	</div>
 	<div class="name">
-		<h5>Abdumajid Someone</h5>
+		<h5>Abdumajid</h5>
 	</div>
 	<div class="position">
 		<p>Project owner</p>
@@ -532,7 +532,8 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> 
+
 
 
 <!--====  End of Testimonial  ====-->
